ajout trait dans Progression

--- a/pages/etu_page.html
+++ b/pages/etu_page.html
@@ -32,17 +32,17 @@
 
             <div id="Progression">
                <div id="test">
-                   <span><p class="waves-effect waves-light btn custom.cprimary">Selection</p></span>
+                   <p class="waves-effect waves-light btn custom.cprimary">Selection</p>
                    <span class="ligne"></span>
-                   <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Suggestion</p></span>
+                   <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Suggestion</p>
                    <span class="ligne"></span>
-                   <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p></span>
+                   <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p>
                    <span class="ligne"></span>
-                   <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p></span>
+                   <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p>
                    <span class="ligne"></span>
-                   <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p></span>
+                   <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p>
                    <span class="ligne"></span>
-                   <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p></span>
+                   <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p>
                </div>
             </div>
 
