--- a/pages/etu_suggestion.html
+++ b/pages/etu_suggestion.html
@@ -31,11 +31,16 @@
 
             <div id="Progression">
               <div class="z-depth-2">
-                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_selection.html" style="color: white;">Selection</a></p>
+                <a class="waves-effect waves-light btn custom.cprimary" href="etu_selection.html">Selection</a>
+                <span class="ligne"></span>
                 <p class="waves-effect waves-light btn custom.cprimary">Suggestion</p>
+                <span class="ligne"></span>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p>
+                <span class="ligne"></span>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p>
+                <span class="ligne"></span>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p>
+                <span class="ligne"></span>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p>
                </div>
             </div>
