ajouter Calendrier.js

--- a/pages/etu_commentaire.html
+++ b/pages/etu_commentaire.html
@@ -31,11 +31,16 @@
 
             <div id="Progression">
               <div class="z-depth-2">
-                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_selection.html" style="color: white;">Selection</a></p>
-                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_suggestion.html" style="color: white;">Suggestion</a></p>
-                <p class="waves-effect waves-light btn custom.cprimary"><a href="etu_salle.html" style="color: white;">Salle</a></p>
+                <a class="waves-effect waves-light btn custom.cprimary" href="etu_selection.html">Selection</a>
+                <span class="ligne"></span>
+                <a class="waves-effect waves-light btn custom.cprimary" href="etu_suggestion.html">Suggestion</a>
+                <span class="ligne"></span>
+                <a class="waves-effect waves-light btn custom.cprimary" href="etu_salle.html">Salle</a>
+                <span class="ligne"></span>
                 <p class="waves-effect waves-light btn custom.cprimary">Commentaire</p>
+                <span class="ligne"></span>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p>
+                <span class="ligne"></span>
                 <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p>
                </div>
             </div>
