--- a/pages/etu_selection.html
+++ b/pages/etu_selection.html
@@ -9,10 +9,7 @@
   <link type="text/css" rel="stylesheet" href="../css/stylesheetETU.css" />
   <link type="text/css" rel="stylesheet" href="../css/main.css" />
 
-
-
-
-
+  <!-- IMPORT CALENDAR -->
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.css' />
 
   <script src='http://code.jquery.com/jquery-1.11.3.min.js'></script>
