--- a/pages/voirdemande2.html
+++ b/pages/voirdemande2.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
+    <link type="text/css" rel="stylesheet" href="../css/stylesheetETU.css" />
+    <link type="text/css" rel="stylesheet" href="../css/main.css" />
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script type = "text/javascript"
+            src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
 </head>
+
 <body>
-$END$
+<div class="container-fluid fill-height">
+    <div class="row">
+        <div class="col s2 custom.cprimary" id="Header">
+            <h3>AppEDT</h3>
+            <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
+            <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
+        </div>
+        <div class="col s10 offset-s2" id="Panel">
+            <div id="EDT" class="z-depth-2">
+                <img src="../imgs/ent.png" class="responsive-img" alt="sreen edt">
+            </div>
+
+            <br>
+
+            <div id="Progression">
+                <div id="test">
+                    <span><p class="waves-effect waves-light btn custom.cprimary">Accepter</p></span>
+                    <span class="ligne"></span>
+                    <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Modifier</p></span>
+                    <span class="ligne"></span>
+                    <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Refuser</p></span>
+                    <span class="ligne"></span>
+                    </span>
+                </div>
+            </div>
+
+            <div id="Formulaire">
+                <div class="z-depth-2">
+                    <h6>Ajouter vos interactions utilisateurs ICI :) </h6>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+<!--JavaScript at end of body for optimized loading-->
+<script type="text/javascript" src="../js/materialize.min.js"></script>
 </body>
-</html>
