--- a/pages/prof_notifications.html
+++ b/pages/prof_notifications.html
@@ -94,7 +94,7 @@
 
                 <td>Vous avez un demande de déplacement de la part de 4A IPS</td>
                 <td>12:36</td>
-                <td> <a href="pages/etu_page.html"> Voir</a></td>
+                <td> <a href="voirdemande1.html"> Voir</a></td>
             </tr>
 
             <tr>
