--- a/pages/prof_passerdemandedep.html
+++ b/pages/prof_passerdemandedep.html
@@ -159,6 +159,10 @@
                     </div>
                 </div>
 
+                <div class = "card-panel">
+                    <button class = "btn waves-effect waves-teal">Add</button></td>      </div>
+
+
                 <!--<div class="row">
                     <form class="col s12">
                         <div class="row">
