--- a/pages/voirdemande2.html
+++ b/pages/voirdemande2.html
@@ -25,7 +25,7 @@
         </div>
         <div class="col s10 offset-s2" id="Panel">
             <div id="EDT" class="z-depth-2">
-                <img src="../imgs/ent.png" class="responsive-img" alt="sreen edt">
+                <img src="../imgs/emploirouge.jpg" class="responsive-img" alt="sreen edt">
             </div>
 
             <br>
@@ -37,16 +37,10 @@
                     <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Modifier</p></span>
                     <span class="ligne"></span>
                     <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Refuser</p></span>
-                    <span class="ligne"></span>
-                    </span>
                 </div>
             </div>
 
-            <div id="Formulaire">
-                <div class="z-depth-2">
-                    <h6>Ajouter vos interactions utilisateurs ICI :) </h6>
-                </div>
-            </div>
+
         </div>
 
     </div>
