--- a/pages/etu_page.html
+++ b/pages/etu_page.html
@@ -12,20 +12,19 @@
         <!-- IMPORT CALENDAR -->
       <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.css' />
 
-      <script src='http://code.jquery.com/jquery-1.11.3.min.js'></script>
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment.min.js'></script>
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js'></script>
+      <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js"></script>
 
       <!-- Pour ICAL -->
       <script src="../js/ical.js-master/build/ical.js"></script>
       <script src="../js/ical.js-master/build/ical.min.js"></script>
-      <script type="../js/calendrier.js"></script>
+
 
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <script type = "text/javascript"
-                src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
     </head>
 
     <body>
@@ -40,6 +39,9 @@
             <div id="EDT" class="z-depth-2">
              <!-- <img src="../imgs/ent.png" class="responsive-img" alt="sreen edt"> -->
              <div id="calendar"></div>
+
+                <script src="../js/calendrier.js"></script>
+
             </div>
 
             <br>
