ajout Calendrier dans Toutes les Pages Etu

--- a/pages/etu_selection.html
+++ b/pages/etu_selection.html
@@ -17,7 +17,6 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js'></script>
 
   <!-- Pour ICAL -->
-  <script src="../js/ical.js-master/build/ical.js"></script>
   <script src="../js/ical.js-master/build/ical.min.js"></script>
 
 
@@ -37,6 +36,7 @@
     <div class="col s10 offset-s2" id="Panel">
       <div class="EDT">
         <div id="calendar"></div>
+        <script src="../js/calendrier.js"></script>
       </div>
 
 
