--- a/pages/etu_suggestion.html
+++ b/pages/etu_suggestion.html
@@ -12,14 +12,12 @@
         <!-- IMPORT CALENDAR -->
       <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.css' />
 
-      <script src='http://code.jquery.com/jquery-1.11.3.min.js'></script>
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment.min.js'></script>
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js'></script>
+      <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js"></script>
 
       <!-- Pour ICAL -->
-      <script src="../js/ical.js-master/build/ical.js"></script>
       <script src="../js/ical.js-master/build/ical.min.js"></script>
-      <script type="../js/calendrier.js"></script>
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -36,7 +34,8 @@
           
           <div class="col s10 offset-s2" id="Panel">
             <div id="EDT">
-             <div id="calendar"></div>
+              <div id="calendar"></div>
+              <script src="../js/calendrier.js"></script>
             </div>
 
             <br>
