--- a/pages/etu_recap.html
+++ b/pages/etu_recap.html
@@ -44,7 +44,7 @@
               <div class="z-depth-2">
                 <a class="waves-effect waves-light btn custom.cprimary" href="etu_selection.html">Selection</a>
                 <span class="ligne"></span>
-                <a class="waves-effect waves-light btn custom.cprimary" href="etu_sugestion.html">Suggestion</a>
+                <a class="waves-effect waves-light btn custom.cprimary" href="etu_suggestion.html">Suggestion</a>
                 <span class="ligne"></span>
                 <a class="waves-effect waves-light btn custom.cprimary" href="etu_salle.html">Salle</a>
                 <span class="ligne"></span>
