--- a/pages/etu_page.html
+++ b/pages/etu_page.html
@@ -28,7 +28,7 @@
     <body>
       <div class="container-fluid fill-height">
         <div class="row">
-          <div class="col s2 custom.cprimary" id="Header">
+          <div class="col s2 l2 custom.cprimary" id="Header">
             <h3>AppEDT</h3>
             <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
             <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
