--- a/pages/admin_demande.html
+++ b/pages/admin_demande.html
@@ -38,7 +38,7 @@
                                  <p>Eh'Manu Tu Descends</p>
                              </div>
                              <div class="card-action">
-                                 <a href="#" class=" green btn waves-effect waves-light"><i class="material-icons left">check</i>Accepter</a>
+                                 <a href="#" class=" green waves-effect waves-light btn"><i class="material-icons left">check</i>Accepter</a>
                                  <a href="#" class="red waves-effect waves-light btn"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
