--- a/pages/accepter.html
+++ b/pages/accepter.html
@@ -33,9 +33,7 @@
             <div id="Progression">
                 <div id="test">
                     <span><p class="waves-effect waves-light btn custom.cprimary">Accepter</p></span>
-                    <span class="ligne"></span>
                     <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Modifier</p></span>
-                    <span class="ligne"></span>
                     <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Refuser</p></span>
 
 
@@ -43,15 +41,14 @@
             </div>
             <div id="Formulaire">
                 <div class="z-depth-2">
-                    <h6>Récapitulatif de la demande, si vous avez choisie de créer un sondage la demande ne sera notifié au professeur concerné qu'une fois la demande validé par une majorité d'élèves concernés</h6>
 
 
                     <div class="col s6 offset-s1 card">
                         <div class="card-content">
-                            <h5>// cours choisi</h5>
+                            <h5>cours choisi</h5>
                             <h6>Suggestion : </h6> <p>suggestion1</p>
                             <h6>Salle : </h6> <p>Informatique / > 20 places</p>
-                            <h6>Sondage : </h6> <p>OUI</p>
+                            <h6>Classe : </h6> <p>4A IPS</p>
                         </div>
                     </div>
                     <!--  refaire la card avec une hiérarchie de couleur (foncé/clair) et non de taille -->
