--- a/pages/admin_page.html
+++ b/pages/admin_page.html
@@ -2,9 +2,9 @@
  <html>
 
  <head>
-     <meta charset="utf-8">
+     <meta charset="utf-8" />
      <!--Import Google Icon Font-->
-     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
      <!--Import materialize.css-->
      <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
      <link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
@@ -25,7 +25,8 @@
              </div>
 
              <div class="col s10 offset-s2" id="Panel">
-                 <div class="row" style="margin-bottom: 0">
+
+                 <div class="row" style="margin-bottom: 0" id="c1">
                      <div class="col s12 ">
                          <div class="card grey " style="margin-bottom:0">
                              <div class="card-content black-text">
@@ -34,12 +35,12 @@
                              </div>
                              <div class="card-action">
                                  <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
-                                 <a href="#" class="waves-effect waves-light btn red"><i class="material-icons left">clear</i>Refuser</a>
+                                 <a href="#" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c1')"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
                      </div>
                  </div>
-                 <div class="row" style="margin-bottom: 0">
+                 <div class="row" style="margin-bottom: 0" id="c2">
                      <div class="col s12 ">
                          <div class="card grey " style="margin-bottom:0">
                              <div class="card-content black-text">
@@ -48,12 +49,12 @@
                              </div>
                              <div class="card-action">
                                  <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
-                                 <a href="#" class="waves-effect waves-light btn red"><i class="material-icons left">clear</i>Refuser</a>
+                                 <a href="#" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c2')"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
                      </div>
                  </div>
-                 <div class="row" style="margin-bottom: 0">
+                 <div class="row" style="margin-bottom: 0" id="c3">
                      <div class="col s12 ">
                          <div class="card grey " style="margin-bottom:0">
                              <div class="card-content black-text">
@@ -62,12 +63,12 @@
                              </div>
                              <div class="card-action">
                                  <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
-                                 <a href="#" class="waves-effect waves-light btn red"><i class="material-icons left">clear</i>Refuser</a>
+                                 <a href="#" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c3')"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
                      </div>
                  </div>
-                 <div class="row" style="margin-bottom: 0">
+                 <div class="row" style="margin-bottom: 0" id="c4">
                      <div class="col s12 ">
                          <div class="card grey " style="margin-bottom:0">
                              <div class="card-content black-text">
@@ -76,42 +77,20 @@
                              </div>
                              <div class="card-action">
                                  <a href="#" class="waves-effect waves-light btn" style="background-color: #2fb0d4 ">Consulter</a>
-                                 <a href="#" class="waves-effect waves-light btn red"><i class="material-icons left">clear</i>Refuser</a>
+                                 <a href="#" class="waves-effect waves-light btn red" onclick="stopDisplayingMyCard('c4')"><i class="material-icons left">clear</i>Refuser</a>
                              </div>
                          </div>
                      </div>
                  </div>
 
 
-                 <!-- <div id="EDT" class="z-depth-2">
-             <img src="../imgs/ent.png" class="responsive-img" alt="sreen edt">
-            </div>
-
-            <br>
-
-            <div id="Progression">
-               <div class="z-depth-2">
-                <p class="waves-effect waves-light btn custom.cprimary">Selection</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Suggestion</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p>
-                <p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p>
-               </div>
-            </div>
-
-            <div id="Formulaire">
-              <div class="z-depth-2">
-                <h6>Ajouter vos interactions utilisateurs ICI :) </h6>
-               </div>
-            </div>
-          </div> -->
 
              </div>
          </div>
      </div>
 
 
-         <!--JavaScript at end of body for optimized loading-->
-         <script type="text/javascript" src="./js/materialize.min.js"></script>
+     <!--JavaScript at end of body for optimized loading-->
+     <script type="text/javascript" src="../js/materialize.min.js"></script>
+     <script type="text/javascript" src="../js/adminCard.js"></script>
  </body>
