--- a/pages/refuser.html
+++ b/pages/refuser.html
@@ -33,9 +33,9 @@
 
                 <div id="Progression">
                     <div id="test">
-                        <span><p class="waves-effect waves-light btn custom.cprimary disabled">Accepter</p></span>
-                        <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Modifier</p></span>
-                        <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary ">Refuser</p></span>
+                        <a href="accepter.html" class="waves-effect waves-light btn-large">Accepter</a>
+                        <a href="modifier.html" class="waves-effect waves-light btn-large">Modifier</a>
+                        <a href="refuser.html" class="waves-effect waves-light btn-large">Refuser</a>
 
 
                     </div>
