prof pages update

--- a/pages/refuser.html
+++ b/pages/refuser.html
@@ -55,13 +55,13 @@
                                 <div class = "row">
                                     <div class = "input-field col s12">
                                         <input placeholder = "Raisons " id = "comments"
-                                               type = "text" disabled />
+                                               type = "text"  />
                                         <label for = "comments">Raisons(Optionnel)</label>
                                     </div>
                                 </div>
 
                                 <div class = "card-panel">
-                                    <button class = "btn waves-effect waves-teal">Add</button></td>      </div>
+                                    <button class = "btn waves-effect waves-teal">Ajouter</button></td>      </div>
                                 </div></form>
                     </div>
 
