--- a/pages/voirdemande1.html
+++ b/pages/voirdemande1.html
@@ -153,9 +153,11 @@
 
             <div id="Progression">
                 <div id="test">
-                    <span><p class="waves-effect waves-light btn custom.cprimary">Accepter</p></span>
-                    <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Modifier</p></span>
-                    <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Refuser</p></span>
+                    <a href="accepter.html" class="waves-effect waves-light btn-large">Accepter</a>
+                    <a href="modifier.html" class="waves-effect waves-light btn-large">Modifier</a>
+                    <a href="refuser.html" class="waves-effect waves-light btn-large">Refuser</a>
+
+
                 </div>
             </div>
         </div>
