--- a/pages/accepter.html
+++ b/pages/accepter.html
@@ -45,10 +45,10 @@
 
                     <div class="col s6 offset-s1 card">
                         <div class="card-content">
-                            <h5>cours choisi</h5>
-                            <h6>Suggestion : </h6> <p>suggestion1</p>
-                            <h6>Salle : </h6> <p>Informatique / > 20 places</p>
-                            <h6>Classe : </h6> <p>4A IPS</p>
+                            <h5>CLASSE :</h5><p> 4A IPS</p>
+                            <h5>DATE :</h5> <p>24/05/2019</p>
+                            <h5>HEURE: </h5> <p> 11:15 - 12:30</p>
+                            <h5>SALLE :</h5> <p> TD4 </p>
                         </div>
                     </div>
                     <!--  refaire la card avec une hiérarchie de couleur (foncé/clair) et non de taille -->
