--- a/pages/etu_selection.html
+++ b/pages/etu_selection.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
@@ -36,11 +37,9 @@
     <div class="col s10 offset-s2" id="Panel">
       <div class="EDT">
         <div id="calendar"></div>
-        <script src="../js/calendrier.js"></script>
+        <script src="../js/calendrierSelection.js"></script>
       </div>
 
-
-        <script src="../js/calendrier.js"></script>
 
       <br>
 
@@ -62,7 +61,9 @@
 
       <div id="Formulaire">
         <div class="z-depth-2">
+
           <p>Sélectionner le cours sur lequel vous voulez agir</p>
+          <textarea id="cour"></textarea>
           <div class="row BtnChoix" id="choixBouton">
             <a href="etu_suggestion.html" class="waves-effect waves-light btn-large">Deplacement</a>
             <a href="#" class="waves-effect waves-light btn-large">Echange</a>
