--- a/pages/sondage.html
+++ b/pages/sondage.html
@@ -36,7 +36,7 @@
          </div>
          <div class="col s10 offset-s2" id="Panel">
              <div class="row">
-                 <div class="col s10 offset-s1">
+                 <div class="col m10 offset-m1 s12">
                      <div class="card">
                          <div class="card-content">
                              <span class="card-title">Cours de physique</span>
@@ -51,7 +51,7 @@
              </div>
 
              <div class="row">
-                 <div class="col s8 offset-s2">
+                 <div class="col m8 offset-m2 s12">
                      <div class="row">
                          <div class="col s4" id="oui">
                              <div class="card">
@@ -79,7 +79,7 @@
              </div>
 
              <div class="row">
-                 <div class="col s4 offset-s4">
+                 <div class="col m4 offset-m4 s12">
                      <div class="card" id="choixChangement">
                          <div class="card-content">
                              <form class="" action="index.html" method="post">
@@ -116,7 +116,7 @@
                  </div>
              </div>
              <div class="row">
-                 <div class="col s4 offset-s4" id="validation">
+                 <div class="col m4 offset-m4 s12" id="validation">
                      <div class="card" id="choixChangement">
                          <div class="card-content center-align">
                              <span class="card-title">Validation</span>
