--- a/pages/etu_page.html
+++ b/pages/etu_page.html
@@ -30,7 +30,10 @@
         <div class="row">
           <div class="col s2 l2 custom.cprimary" id="Header">
             <h3>AppEDT</h3>
-            <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
+
+            <a class="btn-floating btn-large waves-effect waves-light btn hide-on-med-and-up" id="BtnDeco"> <i class="material-icons">exit_to_app</i></a>
+
+            <a class="waves-effect waves-light btn hide-on-small-only" id="BtnDeco">Deconnexion</a>
             <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
           </div>
           <div class="col s10 offset-s2" id="Panel">
