--- a/pages/voirdemande1.html
+++ b/pages/voirdemande1.html
@@ -153,9 +153,9 @@
 
             <div id="Progression">
                 <div id="test">
-                    <a href="accepter.html" class="waves-effect waves-light btn-large">Accepter</a>
-                    <a href="modifier.html" class="waves-effect waves-light btn-large">Modifier</a>
-                    <a href="refuser.html" class="waves-effect waves-light btn-large">Refuser</a>
+                    <a href="prof_accepter.html" class="waves-effect waves-light btn-large">Accepter</a>
+                    <a href="prof_modifier.html" class="waves-effect waves-light btn-large">Modifier</a>
+                    <a href="prof_refuser.html" class="waves-effect waves-light btn-large">Refuser</a>
 
 
                 </div>
