--- a/pages/etu_selection.html
+++ b/pages/etu_selection.html
@@ -26,68 +26,71 @@
 </head>
 
 <body>
-<div class="container-fluid fill-height">
-  <div class="row">
-    <div class="col s2 custom.cprimary" id="Header">
-      <h3>AppEDT</h3>
-      <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
-      <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
-    </div>
+  <div class="container-fluid fill-height">
+    <div class="row">
+       <div class="col s2 l2 custom.cprimary" id="Header">
+            <h3>AppEDT</h3>
 
-    <div class="col s10 offset-s2" id="Panel">
-      <div class="EDT">
-        <div id="calendar"></div>
-        <script src="../js/calendrierSelection.js"></script>
-      </div>
+            <a class="btn-floating btn-large waves-effect waves-light btn hide-on-med-and-up" id="BtnDeco"> <i class="material-icons">exit_to_app</i></a>
 
-
-      <br>
-
-      <div id="Progression">
-        <div class="z-depth-2">
-          <span><p class="waves-effect waves-light btn custom.cprimary">Selection</p></span>
-          <span class="ligne"></span>
-          <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Suggestion</p></span>
-          <span class="ligne"></span>
-          <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p></span>
-          <span class="ligne"></span>
-          <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p></span>
-          <span class="ligne"></span>
-          <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p></span>
-          <span class="ligne"></span>
-          <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p></span>
+            <a class="waves-effect waves-light btn hide-on-small-only" id="BtnDeco">Deconnexion</a>
+            <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
         </div>
-      </div>
 
-      <div id="Formulaire">
-        <div class="z-depth-2">
+      <div class="col s10 offset-s2" id="Panel">
+        <div class="EDT">
+          <div id="calendar"></div>
+          <script src="../js/calendrierSelection.js"></script>
+        </div>
 
-          <p>Sélectionner le cours sur lequel vous voulez agir</p>
-          <textarea id="cour"></textarea>
-          <div class="row BtnChoix" id="choixBouton">
-            <a href="etu_suggestion.html" class="waves-effect waves-light btn-large">Deplacement</a>
-            <a href="#" class="waves-effect waves-light btn-large">Echange</a>
-            <a href="#" class="waves-effect waves-light btn-large">Modification</a>
+
+        <br>
+
+        <div id="Progression">
+          <div class="z-depth-2">
+            <span><p class="waves-effect waves-light btn custom.cprimary">Selection</p></span>
+            <span class="ligne"></span>
+            <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Suggestion</p></span>
+            <span class="ligne"></span>
+            <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Salle</p></span>
+            <span class="ligne"></span>
+            <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Commentaire</p></span>
+            <span class="ligne"></span>
+            <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Sondage</p></span>
+            <span class="ligne"></span>
+            <span><p class="waves-effect waves-light btn custom.cprimary custom-text.text-cprimary disabled">Récapitulatif</p></span>
+          </div>
+        </div>
+
+        <div id="Formulaire">
+          <div class="z-depth-2">
+
+            <p>Sélectionner le cours sur lequel vous voulez agir</p>
+            <textarea id="cour"></textarea>
+            <div class="row BtnChoix" id="choixBouton">
+              <a href="etu_suggestion.html" class="waves-effect waves-light btn-large">Deplacement</a>
+              <a href="#" class="waves-effect waves-light btn-large">Echange</a>
+              <a href="#" class="waves-effect waves-light btn-large">Modification</a>
+            </div>
           </div>
         </div>
       </div>
+
     </div>
-
   </div>
-</div>
 
 
-<script type="text/javascript">
-  document.getElementById("choixBouton").style.display = "none";
-  var p = document.getElementById("calendar");
-  calendar.onclick = showChoixBouton;
+  <script type="text/javascript">
+    document.getElementById("choixBouton").style.display = "none";
+    var p = document.getElementById("calendar");
+    calendar.onclick = showChoixBouton;
 
 
-</script>
+  </script>
 
-<!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="./js/materialize.min.js">
+  <!--JavaScript at end of body for optimized loading-->
+  <script type="text/javascript" src="./js/materialize.min.js">
 
 
-</script>
+  </script>
 </body>
