--- a/pages/prof_notifications.html
+++ b/pages/prof_notifications.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>  <!--Import Google Icon Font-->
+<head>
+    <meta charset="utf-8"/>
+  <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
