--- a/pages/sondage.html
+++ b/pages/sondage.html
@@ -29,14 +29,11 @@
    <body>
      <div class="container-fluid fill-height">
        <div class="row">
-            <div class="col s2 l2 custom.cprimary" id="Header">
-                <h3>AppEDT</h3>
-
-                <a class="btn-floating btn-large waves-effect waves-light btn hide-on-med-and-up" id="BtnDeco"> <i class="material-icons">exit_to_app</i></a>
-
-                <a class="waves-effect waves-light btn hide-on-small-only" id="BtnDeco">Deconnexion</a>
-                <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
-            </div>
+         <div class="col s2 custom.cprimary" id="Header">
+           <h3>AppEDT</h3>
+           <a class="waves-effect waves-light btn" id="BtnDeco">Deconnexion</a>
+           <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
+         </div>
          <div class="col s10 offset-s2" id="Panel">
              <div class="row">
                  <div class="col m10 offset-m1 s12">
@@ -125,7 +122,7 @@
                              <span class="card-title">Validation</span>
                              <p>"J'ai choisi en mon âme et conscience."</p>
                              <a href="sondage.html" class="waves-effect waves-light btn"><i class="material-icons left">block</i>Recommencer</a>
-                             <a class="waves-effect waves-light btn"><i class="material-icons left">send</i>Valider</a>
+                             <a href="etu_recap.html" class="waves-effect waves-light btn"><i class="material-icons left">send</i>Valider</a>
                          </div>
                      </div>
                  </div>
