responsive pages Etu flex

--- a/pages/etu_sondage.html
+++ b/pages/etu_sondage.html
@@ -64,12 +64,11 @@
               <div class="z-depth-2">
                 <h6>Sélectionner la salle que ou souhaité ou ses caractéristiques : #cours sélectionné</h6>
 <!-- <br> -->
-                <div class="col s4 offset-s2">
+                <div class="DispayList">
                   <a href="sondage.html" class="waves-effect waves-light btn-large">Créer un sondage</a> 
-                </div>
-                <div class="col s4 offset-s2">
                   <a href="etu_recap.html" class="waves-effect waves-light btn-large">Y a déjà consensus !</a> 
-                </div>             
+                </div>      
+                
               </div>
             </div>
           </div>
