--- a/pages/etu_suggestion.html
+++ b/pages/etu_suggestion.html
@@ -65,8 +65,8 @@
                 <h6>Sélectionner les emplacements où ce cours pourrait être déplacé : #cours sélectionné</h6>
 
                   <form action="#">
-                  
-                      <div class="col s4 offset-s2">
+                    <div class="DispayList">
+                      <div>
                         <p>
                           <label>
                             <input type="checkbox" />
@@ -93,16 +93,16 @@
                         </p>
                       </div>
 
-                      <p class="col s2">
+                      <div >
                         <label>
                           <input class="with-gap" name="group1" type="radio"  />
                           <span>Libre</span>
                         </label>
-                      </p>
-                      <p class="col s2 offset-s1">
+                      </div>
+                      <div>
                         <a href="etu_salle.html" class="waves-effect waves-light btn-large">Valider</a> 
-                      </p>
-                    
+                      </div>
+                    </div>
                   </form>
                </div>
             </div>
