--- a/pages/etu_recap.html
+++ b/pages/etu_recap.html
@@ -64,20 +64,20 @@
               <div class="z-depth-2">
                 <h6>Récapitulatif de la demande, si vous avez choisie de créer un sondage la demande ne sera notifié au professeur concerné qu'une fois la demande validé par une majorité d'élèves concernés</h6>
 
-
-                <div class="col s6 offset-s1 card">
-                  <div class="card-content">
-                    <h5>// cours choisi</h5>
-                    <h6>Suggestion : </h6> <p>suggestion1</p>
-                    <h6>Salle : </h6> <p>Informatique / > 20 places</p>
-                    <h6>Sondage : </h6> <p>OUI</p>
-                  </div>
+                <div>
+                    <div class="card-content">
+                      <h5>// cours choisi</h5>
+                      <h6>Suggestion : </h6> <p>suggestion1</p>
+                      <h6>Salle : </h6> <p>Informatique / > 20 places</p>
+                      <h6>Sondage : </h6> <p>OUI</p>
+                    </div>
+                 <!--  refaire la card avec une hiérarchie de couleur (foncé/clair) et non de taille -->
+                        
+                  <div class="DispayList">
+                    <a href="#" class="waves-effect waves-light btn-large">Terminer </a> 
+                  </div> 
                 </div>
-               <!--  refaire la card avec une hiérarchie de couleur (foncé/clair) et non de taille -->
-                      
-                <p class="col s2 offset-s1">
-                  <a href="#" class="waves-effect waves-light btn-large">Terminer </a> 
-                </p> 
+
               </div>
             </div>
           </div>
