--- a/pages/etu_selection.html
+++ b/pages/etu_selection.html
@@ -67,7 +67,7 @@
 
             <p>Sélectionner le cours sur lequel vous voulez agir</p>
             <textarea id="cour"></textarea>
-            <div class="row BtnChoix" id="choixBouton">
+            <div class="BtnChoix" id="choixBouton">
               <a href="etu_suggestion.html" class="waves-effect waves-light btn-large">Deplacement</a>
               <a href="#" class="waves-effect waves-light btn-large">Echange</a>
               <a href="#" class="waves-effect waves-light btn-large">Modification</a>
