--- a/pages/voirdemande1.html
+++ b/pages/voirdemande1.html
@@ -167,6 +167,9 @@
             <br>
 
             <div id="Progression">
+                 <p style="color:red;">Créneau initial à déplacer</p><p style="color:green;">Créneau proposé</p>
+
+
                 <div id="test">
                     <a href="prof_accepter.html" class="waves-effect waves-light btn-large">Accepter</a>
                     <a href="prof_modifier.html" class="waves-effect waves-light btn-large">Modifier</a>
