--- a/pages/admin_page.html
+++ b/pages/admin_page.html
@@ -18,14 +18,18 @@
  <body>
      <div class="container-fluid fill-height">
          <div class="row">
-            <div class="col s2 l2 custom.cprimary" id="Header">
-                <h3>AppEDT</h3>
-
-                <a class="btn-floating btn-large waves-effect waves-light btn hide-on-med-and-up" id="BtnDeco"> <i class="material-icons">exit_to_app</i></a>
-
-                <a class="waves-effect waves-light btn hide-on-small-only" id="BtnDeco">Deconnexion</a>
+              <div class="col s2 l2 custom.cprimary" id="Header">
+                <div>
+                  <h4>Bonjour Admin !</h4>
+                  <a class="btn-floating btn-large waves-effect waves-light btn hide-on-med-and-up" href="connexion.html" id="BtnDeco"> <i class="material-icons">exit_to_app</i></a>
+                  <a class="waves-effect waves-light btn hide-on-small-only" href="connexion.html" id="BtnDeco">Deconnexion</a>
+                </div>
+                <div>
+                  <img src="../imgs/logo_app.png" class="responsive-img" alt="Logo AppEDT">
+                  <h3>AppEDT</h3>
+                </div>
                 <img src="../imgs/logo_ensim_white.png" class="responsive-img" alt="Logo ENSIM">
-            </div>
+              </div>
 
              <div class="col s10 offset-s2" id="Panel">
 
