--- a/pages/etu_suggestion.html
+++ b/pages/etu_suggestion.html
@@ -43,7 +43,7 @@
           <div class="col s10 offset-s2" id="Panel">
             <div id="EDT">
               <div id="calendar"></div>
-              <script src="../js/calendrier.js"></script>
+              <script src="../js/calendrierSuggestion.js"></script>
             </div>
 
             <br>
