--- a/pages/etu_selection.html
+++ b/pages/etu_selection.html
@@ -72,7 +72,7 @@
             <p>Sélectionner le cours sur lequel vous voulez agir</p>
             <textarea id="cour"></textarea>
             <div class="BtnChoix" id="choixBouton">
-              <a href="etu_suggestion.html" class="waves-effect waves-light btn-large">Deplacement</a>
+              <a href="etu_suggestion.html?cour=" class="waves-effect waves-light btn-large">Deplacement</a>
               <a href="#" class="waves-effect waves-light btn-large">Echange</a>
               <a href="#" class="waves-effect waves-light btn-large">Modification</a>
             </div>
